Added Kin stuff

--- a/Toss.Client/Shared/Nav/AccountMenu.cshtml
+++ b/Toss.Client/Shared/Nav/AccountMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<h1>Your TOSS account</h1>
+<h1>Your KIN TOSS account</h1>
 <div class="mb-2">
     <NavLink class="btn btn-primary" href="/account" Match="NavLinkMatch.All">
         Edit
