--- a/Toss.Client/Shared/Nav/TopMenu.cshtml
+++ b/Toss.Client/Shared/Nav/TopMenu.cshtml
@@ -9,7 +9,12 @@
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <NavLink class="nav-link btn btn-sm " href="/" Match="NavLinkMatch.All">
-                    Toss Board
+                    KIN TOSS Board
+                </NavLink>
+            </li>
+            <li class="nav-item active">
+                <NavLink class="nav-link btn btn-sm " href="/kin" Match="NavLinkMatch.All">
+                    Market place
                 </NavLink>
             </li>
             @if (account != null)
